--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ h1 {
     border-radius: 10px;
     background: #FFEBF2;
     width: 85vw;
-    color: #E0C1CC;
+    color: #AD5C78;
     display: inline-block;
     box-shadow: 2px 2px 1px 0px #FFD6E4;
 }
