--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ h1 {
     width: 85vw;
     color: #AD5C78;
     display: inline-block;
-    box-shadow: 2px 2px 1px 0px #FFD6E4;
+    box-shadow: 2px 2px 1px 0px #E4C9D2;
 }
 
 .card:hover {
